--- a/force-app/main/default/lwc/createInvoice/createInvoice.html
+++ b/force-app/main/default/lwc/createInvoice/createInvoice.html
@@ -34,7 +34,9 @@
                 <p>Data in JSON format:</p>
                 <pre>{jsonStringToDisplay}</pre>
             </div>
+            <div class="slds-align_absolute-center">
+                <lightning-button variant = "brand" label = "Proceed to Create Invoice" onclick={createInvoice}></lightning-button>
+            </div>
         </lightning-card>
-        
     </template>
 </template>
